# chatroom

./: .gitignore  README.md
ChatRoom/: Add.cpp  Add.h  Add.ui  CMakeLists.txt  CMakeSettings.json  ChatRoom.cpp  ChatRoom.h  ChatRoom.qrc  ChatRoom.sln  ChatRoom.ui  ChatRoom.vcxproj  ChatRoom.vcxproj.filters  CreatGroup.cpp  CreatGroup.h  CreatGroup.ui  ImageItem.cpp  Login.cpp  Login.h  Login.ui  MessageItem.cpp  MessageItem.h  NewContacts.cpp  NewContacts.h  NewContacts.ui  Profile.h  Register.cpp  Register.h  TcpConnection.cpp  TcpConnection.h  main.cpp  net.cpp
ChatRoom/ChatRoom/: CMakeLists.txt  main.cpp  net.cpp
ChatRoom/ChatRoom/DAO/: LogInDao.cpp  LogInDao.h  Mysql.h
ChatRoom/ChatRoom/Service/: MessageHandler.cpp  MessageHandler.h  MessageHandlerCreate.cpp  MessageHandlerCreate.h  asfd.h
ChatRoom/ChatRoom/config/: mysql_config.h  server_config.h
ChatRoom/Debug/: ChatRoom.exe.recipe  ChatRoom.ilk  ChatRoom.vcxproj.FileListAbsolute.txt
ChatRoom/Debug/ChatRoom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChatRoom.lastbuildstate  ChatRoom.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
ChatRoom/Debug/moc/: moc_Add.cpp  moc_Add1.cpp  moc_ChatRoom.cpp  moc_CreatGroup.cpp  moc_Login.cpp  moc_NewContacts.cpp  moc_Profile.cpp  moc_Register.cpp  moc_TcpConnection.cpp
ChatRoom/Debug/qmake/: qtvars_Win32_Debug.props
ChatRoom/Debug/rcc/: qrc_ChatRoom.cpp  qrc_Resource.cpp
ChatRoom/Debug/uic/: ui_Add.h  ui_Add1.h  ui_ChatRoom.h  ui_CreatGroup.h  ui_Login.h  ui_NewContact.h  ui_NewContacts.h  ui_Register.h
ChatRoom/Release/ChatRoom.tlog/: ChatRoom.lastbuildstate
ChatRoom/x64/Debug/: ChatRoom.exe.recipe  ChatRoom.ilk  ChatRoom.vcxproj.FileListAbsolute.txt
backend/ChatRoom/: main.cpp  net.cpp
backend/ChatRoom/DAO/: LogInDao.cpp
backend/ChatRoom/Service/: MessageHandler.h  MessageHandlerCreate.h
documents/数据库/: CreateDatabaseTables.sql  DatabaseDesignDocument.md  TestCase.sql
documents/程序设计/概要设计/: 可行性分析.txt  接口文档.md
documents/需求文档/: 需求文档.xlsx
frontend/: Add.ui  ChatRoom.cpp  ChatRoom.qrc  ChatRoom.ui  ChatRoom.vcxproj.filters  CreatGroup.ui  ImageItem.h  Login.h  Login.ui  NewContacts.cpp  NewContacts.ui  Profile.cpp  Register.cpp  Register.ui  TcpConnection.cpp  main.cpp
x64/Debug/: chatroom.exe.recipe
x64/Debug/chatroom.tlog/: CL.command.1.tlog  chatroom.lastbuildstate  chatroom.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_Profile.cpp  moc_add.cpp  moc_chatroom.cpp  moc_creat_group.cpp  moc_login.cpp  moc_new_contacts.cpp
x64/Debug/rcc/: qrc_chatroom.cpp
x64/Debug/uic/: ui_Register.h  ui_add.h  ui_chatroom.h  ui_creat_group.h  ui_login.h  ui_new_contacts.h
(+30 files in other folders)
